web-infras/parser/tests/fixtures/babel/es2017/async-functions/9/output.txt
[SyntaxError]: Missing semicolon or line terminator. (1,31)
1|function foo(promise) { await promise; }
 |                             ^
